--- a/surveylib/build.gradle
+++ b/surveylib/build.gradle
@@ -21,11 +21,20 @@ android {
 
 }
 
+allprojects {
+    repositories {
+        jcenter()
+        maven { url "https://jitpack.io" }
+    }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.google.code.gson:gson:2.8.0'
+    // image upload
+    implementation 'com.github.pqpo:SmartCropper:v1.1.3@aar'
 }
 
 
