--- a/surveylib/build.gradle
+++ b/surveylib/build.gradle
@@ -35,6 +35,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.0'
     // image upload
     implementation 'com.github.pqpo:SmartCropper:v1.1.3@aar'
+    // retrofit along with gson
+    implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
+    implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
 }
 
 
