--- a/surveylib/build.gradle
+++ b/surveylib/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'realm-android'
+
 group='com.github.jitpack'
 
 android {
@@ -21,10 +23,27 @@ android {
 
 }
 
+buildscript {
+    repositories {
+        jcenter()
+        google()
+        maven {
+            url 'http://oss.jfrog.org/artifactory/oss-snapshot-local'
+        }
+    }
+    dependencies {
+        classpath "io.realm:realm-gradle-plugin:5.4.0"
+    }
+}
+
 allprojects {
     repositories {
         jcenter()
         maven { url "https://jitpack.io" }
+        google()
+        maven {
+            url 'http://oss.jfrog.org/artifactory/oss-snapshot-local'
+        }
     }
 }
 
@@ -41,6 +60,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     // toast
     implementation 'com.tapadoo.android:alerter:2.0.5'
+    // database
+    implementation 'io.realm:android-adapters:2.0.0'
 }
 
 
