--- a/surveylib/build.gradle
+++ b/surveylib/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.google.code.gson:gson:2.8.0'
     // image upload
     implementation 'com.github.pqpo:SmartCropper:v1.1.3@aar'
