updated image picker flow

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="in.myinnos.formsurveys">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -23,15 +24,16 @@
 
 
         <!-- providers -->
+
         <provider
             android:name="android.support.v4.content.FileProvider"
-            android:authorities="in.myinnos.formsurveys.provider"
-            android:enabled="true"
+            android:authorities="in.myinnos.formsurveys.com.vansuita.pickimage.provider"
             android:exported="false"
-            android:grantUriPermissions="true">
+            android:grantUriPermissions="true"
+            tools:replace="android:authorities">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/provider_paths" />
+                android:resource="@xml/picker_provider_paths" />
         </provider>
 
         <activity
