--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
 
         <!-- providers -->
 
-        <provider
+        <!--<provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="in.myinnos.formsurveys.com.vansuita.pickimage.provider"
             android:exported="false"
@@ -34,15 +34,10 @@
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/picker_provider_paths" />
-        </provider>
+        </provider>-->
 
         <activity
             android:name="in.myinnos.surveylib.SurveyActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
-            android:windowSoftInputMode="stateHidden" />
-
-        <activity
-            android:name="in.myinnos.surveylib.activity.CropActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:windowSoftInputMode="stateHidden" />
 
