fixed manifest error

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,16 +25,16 @@
 
         <!-- providers -->
 
-        <!--<provider
+        <provider
             android:name="android.support.v4.content.FileProvider"
-            android:authorities="in.myinnos.formsurveys.com.vansuita.pickimage.provider"
+            android:authorities="in.myinnos.formsurveys.in.myinnos.surveylib.provider"
             android:exported="false"
             android:grantUriPermissions="true"
             tools:replace="android:authorities">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/picker_provider_paths" />
-        </provider>-->
+        </provider>
 
         <activity
             android:name="in.myinnos.surveylib.SurveyActivity"
