--- a/surveylib/src/main/AndroidManifest.xml
+++ b/surveylib/src/main/AndroidManifest.xml
@@ -1,2 +1,29 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="in.myinnos.surveylib" />
+    package="in.myinnos.surveylib" >
+
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <application
+        android:configChanges="orientation"
+        android:label="@string/app_name"
+        android:screenOrientation="portrait">
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="in.myinnos.surveylib.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/picker_provider_paths"/>
+        </provider>
+
+    </application>
+
+
+</manifest>
