--- a/surveylib/build.gradle
+++ b/surveylib/build.gradle
@@ -5,11 +5,11 @@ apply plugin: 'realm-android'
 group='com.github.jitpack'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 25
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 26
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
     }
@@ -44,15 +44,19 @@ allprojects {
         maven {
             url 'http://oss.jfrog.org/artifactory/oss-snapshot-local'
         }
+        maven {
+            url "https://maven.google.com"
+        }
     }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
-    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.android.support:support-annotations:25.2.0'
+    implementation 'com.android.support:appcompat-v7:25.2.0'
+    implementation 'com.android.support:recyclerview-v7:25.2.0'
+    implementation 'com.android.support:cardview-v7:25.2.0'
     implementation 'com.google.code.gson:gson:2.8.0'
     // retrofit along with gson
     implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
