fixed manifest error

--- a/surveylib/src/main/AndroidManifest.xml
+++ b/surveylib/src/main/AndroidManifest.xml
@@ -1,12 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="in.myinnos.surveylib" >
-
-    <uses-permission android:name="android.permission.CAMERA" />
-
-    <uses-feature android:name="android.hardware.camera" />
-    <uses-feature android:name="android.hardware.camera.autofocus" />
-
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    xmlns:tools="http://schemas.android.com/tools"
+    package="in.myinnos.surveylib">
 
     <application
         android:configChanges="orientation"
@@ -17,6 +11,7 @@
             android:name="android.support.v4.content.FileProvider"
             android:authorities="in.myinnos.surveylib.provider"
             android:exported="false"
+            tools:replace="android:authorities"
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
