--- a/surveylib/build.gradle
+++ b/surveylib/build.gradle
@@ -57,10 +57,10 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:25.2.0'
     implementation 'com.android.support:recyclerview-v7:25.2.0'
     implementation 'com.android.support:cardview-v7:25.2.0'
-    implementation 'com.google.code.gson:gson:2.8.0'
+    //implementation 'com.google.code.gson:gson:2.8.0'
     // retrofit along with gson
     implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
-    implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     // toast
     implementation 'com.tapadoo.android:alerter:2.0.5'
@@ -68,7 +68,7 @@ dependencies {
     implementation 'io.realm:android-adapters:2.0.0'
 
     // picasso for image view
-    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
 
 
